--- a/latex/files.tex
+++ b/latex/files.tex
@@ -1,4 +1,7 @@
 \doxysection{File List}
 Here is a list of all files with brief descriptions\+:\begin{DoxyCompactList}
+\item\contentsline{section}{\mbox{\hyperlink{colors_8h}{colors.\+h}} \\*Colors\textquotesingle{}s header file }{\pageref{colors_8h}}{}
 \item\contentsline{section}{\mbox{\hyperlink{main_8c}{main.\+c}} \\*Project\textquotesingle{}s main file }{\pageref{main_8c}}{}
+\item\contentsline{section}{\mbox{\hyperlink{snake_8c}{snake.\+c}} \\*Header\textquotesingle{}s functions implementation }{\pageref{snake_8c}}{}
+\item\contentsline{section}{\mbox{\hyperlink{snake_8h}{snake.\+h}} \\*Project\textquotesingle{}s header file }{\pageref{snake_8h}}{}
 \end{DoxyCompactList}
