--- a/latex/main_8c.tex
+++ b/latex/main_8c.tex
@@ -6,6 +6,10 @@ Project\textquotesingle{}s main file.
 
 
 {\ttfamily \#include $<$stdio.\+h$>$}\newline
+{\ttfamily \#include $<$unistd.\+h$>$}\newline
+{\ttfamily \#include $<$stdlib.\+h$>$}\newline
+{\ttfamily \#include \char`\"{}snake.\+h\char`\"{}}\newline
+{\ttfamily \#include \char`\"{}colors.\+h\char`\"{}}\newline
 \doxysubsection*{Functions}
 \begin{DoxyCompactItemize}
 \item 
@@ -20,7 +24,7 @@ Project\textquotesingle{}s main file.
 Mattia Forlin, Matteo Toffoli 
 \end{DoxyAuthor}
 \begin{DoxyDate}{Date}
-2023-\/02-\/03
+2023-\/04-\/27
 \end{DoxyDate}
 \begin{DoxyCopyright}{Copyright}
 Copyright (c) 2023 
