--- a/latex/refman.tex
+++ b/latex/refman.tex
@@ -178,11 +178,26 @@
 %--- Begin generated contents ---
 \chapter{Main page}
 \label{index}\hypertarget{index}{}\input{index}
+\chapter{Obiettivo del gioco}
+\label{md_TODO}
+\Hypertarget{md_TODO}
+\input{md_TODO}
+\chapter{Data Structure Index}
+\input{annotated}
 \chapter{File Index}
 \input{files}
+\chapter{Data Structure Documentation}
+\input{structlabyrinth}
+\input{structsnake}
 \chapter{File Documentation}
+\input{colors_8h}
+\input{colors_8h_source}
 \input{main_8c}
 \input{MAINPAGE_8md}
+\input{snake_8c}
+\input{snake_8h}
+\input{snake_8h_source}
+\input{TODO_8md}
 %--- End generated contents ---
 % Index
   \backmatter
