--- a/documentation/latex/snake_8c.tex
+++ b/documentation/latex/snake_8c.tex
@@ -10,6 +10,8 @@ Header\textquotesingle{}s functions implementation.
 {\ttfamily \#include $<$stdbool.\+h$>$}\newline
 {\ttfamily \#include $<$stdio.\+h$>$}\newline
 {\ttfamily \#include $<$stdlib.\+h$>$}\newline
+{\ttfamily \#include $<$time.\+h$>$}\newline
+{\ttfamily \#include $<$unistd.\+h$>$}\newline
 \doxysubsection*{Data Structures}
 \begin{DoxyCompactItemize}
 \item 
@@ -28,14 +30,20 @@ void \mbox{\hyperlink{snake_8c_af4dd7c26af7f07c5ac92755a599d7c80}{labyrinth\+\_\
 \begin{DoxyCompactList}\small\item\em Function to print the labyrinth. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{snake_8c_a915c7e724f85b799ab526287b0b18577}{find\+\_\+initial\+\_\+position}} (labyrinth\+\_\+t $\ast$l, int $\ast$x, int $\ast$y)
 \begin{DoxyCompactList}\small\item\em Function to find the initial position of the snake. \end{DoxyCompactList}\item 
-void \mbox{\hyperlink{snake_8c_a87767bd428e67e2d104eaf580455a9f6}{moves\+\_\+input}} (char $\ast$move, char $\ast$moves, int $\ast$row, int $\ast$col, int $\ast$score, snake\+\_\+t $\ast$head)
+bool \mbox{\hyperlink{snake_8c_a061bed059e334dfdac25feae5903cef6}{is\+\_\+move\+\_\+valid}} (labyrinth\+\_\+t $\ast$l, int row, int col, int N, int M)
+\item 
+void \mbox{\hyperlink{snake_8c_a2e6ac01d8773c1f85892a883ff9d78ee}{moves\+\_\+input}} (char $\ast$move, char $\ast$moves, int $\ast$row, int $\ast$col, int $\ast$score, snake\+\_\+t $\ast$head, labyrinth\+\_\+t $\ast$l, int mode)
 \begin{DoxyCompactList}\small\item\em Function to receive input from the user and change the position of the snake. \end{DoxyCompactList}\item 
-void \mbox{\hyperlink{snake_8c_acfc9c2a13f37aa63218fcd9c6783f631}{obstacles\+\_\+borders\+\_\+check}} (labyrinth\+\_\+t $\ast$l, int $\ast$row, int $\ast$col, int $\ast$N, int $\ast$M)
-\begin{DoxyCompactList}\small\item\em Function to receive input from the user and change the position of the snake. \end{DoxyCompactList}\item 
+void \mbox{\hyperlink{snake_8c_ac714958e0c94c71011c20e328b190713}{obstacles\+\_\+borders\+\_\+check}} (labyrinth\+\_\+t $\ast$l, snake\+\_\+t $\ast$head, int $\ast$row, int $\ast$col)
+\begin{DoxyCompactList}\small\item\em Function to control obstacles (walls and invalid positions) and objects to collect. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{snake_8c_af1c45d9f8d4376d14696e63c224545a6}{add\+\_\+tail}} (snake\+\_\+t $\ast$head)
 \item 
+void \mbox{\hyperlink{snake_8c_a60263fa58e443d898df01c3a170817ba}{check\+\_\+dead\+\_\+ends}} (labyrinth\+\_\+t $\ast$l, snake\+\_\+t $\ast$head)
+\item 
 void \mbox{\hyperlink{snake_8c_a8f15eb264cdcabee8d3c7d7146ceb1f7}{labyrinth\+\_\+interactive\+\_\+mode\+\_\+run}} (int M, int N)
-\begin{DoxyCompactList}\small\item\em Main function for interactive mode. \end{DoxyCompactList}\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em Main function for interactive mode. \end{DoxyCompactList}\item 
+void \mbox{\hyperlink{snake_8c_a136d1e8d84e2266fbe84f6c115040ec1}{labyrinth\+\_\+\+AI\+\_\+mode\+\_\+run}} (int M, int N)
+\begin{DoxyCompactList}\small\item\em Main function for AI mode. \end{DoxyCompactList}\end{DoxyCompactItemize}
 
 
 \doxysubsection{Detailed Description}
@@ -59,6 +67,12 @@ Copyright (c) 2023
 \doxysubsubsection{\texorpdfstring{add\_tail()}{add\_tail()}}
 {\footnotesize\ttfamily void add\+\_\+tail (\begin{DoxyParamCaption}\item[{snake\+\_\+t $\ast$}]{head }\end{DoxyParamCaption})}
 
+\mbox{\Hypertarget{snake_8c_a60263fa58e443d898df01c3a170817ba}\label{snake_8c_a60263fa58e443d898df01c3a170817ba}} 
+\index{snake.c@{snake.c}!check\_dead\_ends@{check\_dead\_ends}}
+\index{check\_dead\_ends@{check\_dead\_ends}!snake.c@{snake.c}}
+\doxysubsubsection{\texorpdfstring{check\_dead\_ends()}{check\_dead\_ends()}}
+{\footnotesize\ttfamily void check\+\_\+dead\+\_\+ends (\begin{DoxyParamCaption}\item[{labyrinth\+\_\+t $\ast$}]{l,  }\item[{snake\+\_\+t $\ast$}]{head }\end{DoxyParamCaption})}
+
 \mbox{\Hypertarget{snake_8c_a915c7e724f85b799ab526287b0b18577}\label{snake_8c_a915c7e724f85b799ab526287b0b18577}} 
 \index{snake.c@{snake.c}!find\_initial\_position@{find\_initial\_position}}
 \index{find\_initial\_position@{find\_initial\_position}!snake.c@{snake.c}}
@@ -76,6 +90,29 @@ Function to find the initial position of the snake.
 {\em x} & Pointer variable to the x axis of the labyrinth. \\
 \hline
 {\em y} & Pointer variable to the y axis of the labyrinth. \\
+\hline
+\end{DoxyParams}
+\mbox{\Hypertarget{snake_8c_a061bed059e334dfdac25feae5903cef6}\label{snake_8c_a061bed059e334dfdac25feae5903cef6}} 
+\index{snake.c@{snake.c}!is\_move\_valid@{is\_move\_valid}}
+\index{is\_move\_valid@{is\_move\_valid}!snake.c@{snake.c}}
+\doxysubsubsection{\texorpdfstring{is\_move\_valid()}{is\_move\_valid()}}
+{\footnotesize\ttfamily bool is\+\_\+move\+\_\+valid (\begin{DoxyParamCaption}\item[{labyrinth\+\_\+t $\ast$}]{l,  }\item[{int}]{row,  }\item[{int}]{col,  }\item[{int}]{N,  }\item[{int}]{M }\end{DoxyParamCaption})}
+
+\mbox{\Hypertarget{snake_8c_a136d1e8d84e2266fbe84f6c115040ec1}\label{snake_8c_a136d1e8d84e2266fbe84f6c115040ec1}} 
+\index{snake.c@{snake.c}!labyrinth\_AI\_mode\_run@{labyrinth\_AI\_mode\_run}}
+\index{labyrinth\_AI\_mode\_run@{labyrinth\_AI\_mode\_run}!snake.c@{snake.c}}
+\doxysubsubsection{\texorpdfstring{labyrinth\_AI\_mode\_run()}{labyrinth\_AI\_mode\_run()}}
+{\footnotesize\ttfamily void labyrinth\+\_\+\+AI\+\_\+mode\+\_\+run (\begin{DoxyParamCaption}\item[{int}]{M,  }\item[{int}]{N }\end{DoxyParamCaption})}
+
+
+
+Main function for AI mode. 
+
+
+\begin{DoxyParams}{Parameters}
+{\em M} & Number of labyrinth columns. \\
+\hline
+{\em N} & Number of labyrinth rows. \\
 \hline
 \end{DoxyParams}
 \mbox{\Hypertarget{snake_8c_acd65deeb26f89dd33e84b31afe2e9be4}\label{snake_8c_acd65deeb26f89dd33e84b31afe2e9be4}} 
@@ -154,11 +191,11 @@ Function to print the labyrinth.
 {\em s} & Data structure of snake type. \\
 \hline
 \end{DoxyParams}
-\mbox{\Hypertarget{snake_8c_a87767bd428e67e2d104eaf580455a9f6}\label{snake_8c_a87767bd428e67e2d104eaf580455a9f6}} 
+\mbox{\Hypertarget{snake_8c_a2e6ac01d8773c1f85892a883ff9d78ee}\label{snake_8c_a2e6ac01d8773c1f85892a883ff9d78ee}} 
 \index{snake.c@{snake.c}!moves\_input@{moves\_input}}
 \index{moves\_input@{moves\_input}!snake.c@{snake.c}}
 \doxysubsubsection{\texorpdfstring{moves\_input()}{moves\_input()}}
-{\footnotesize\ttfamily void moves\+\_\+input (\begin{DoxyParamCaption}\item[{char $\ast$}]{move,  }\item[{char $\ast$}]{moves,  }\item[{int $\ast$}]{row,  }\item[{int $\ast$}]{col,  }\item[{int $\ast$}]{score,  }\item[{snake\+\_\+t $\ast$}]{s }\end{DoxyParamCaption})}
+{\footnotesize\ttfamily void moves\+\_\+input (\begin{DoxyParamCaption}\item[{char $\ast$}]{move,  }\item[{char $\ast$}]{moves,  }\item[{int $\ast$}]{row,  }\item[{int $\ast$}]{col,  }\item[{int $\ast$}]{score,  }\item[{snake\+\_\+t $\ast$}]{s,  }\item[{labyrinth\+\_\+t $\ast$}]{l,  }\item[{int}]{mode }\end{DoxyParamCaption})}
 
 
 
@@ -178,27 +215,29 @@ Function to receive input from the user and change the position of the snake.
 \hline
 {\em s} & Data structure of snake type. \\
 \hline
+{\em l} & Data structure of labyrinth type. \\
+\hline
+{\em mode} & Variable that contains the chosen game mode. \\
+\hline
 \end{DoxyParams}
-\mbox{\Hypertarget{snake_8c_acfc9c2a13f37aa63218fcd9c6783f631}\label{snake_8c_acfc9c2a13f37aa63218fcd9c6783f631}} 
+\mbox{\Hypertarget{snake_8c_ac714958e0c94c71011c20e328b190713}\label{snake_8c_ac714958e0c94c71011c20e328b190713}} 
 \index{snake.c@{snake.c}!obstacles\_borders\_check@{obstacles\_borders\_check}}
 \index{obstacles\_borders\_check@{obstacles\_borders\_check}!snake.c@{snake.c}}
 \doxysubsubsection{\texorpdfstring{obstacles\_borders\_check()}{obstacles\_borders\_check()}}
-{\footnotesize\ttfamily void obstacles\+\_\+borders\+\_\+check (\begin{DoxyParamCaption}\item[{labyrinth\+\_\+t $\ast$}]{l,  }\item[{int $\ast$}]{row,  }\item[{int $\ast$}]{col,  }\item[{int $\ast$}]{N,  }\item[{int $\ast$}]{M }\end{DoxyParamCaption})}
+{\footnotesize\ttfamily void obstacles\+\_\+borders\+\_\+check (\begin{DoxyParamCaption}\item[{labyrinth\+\_\+t $\ast$}]{l,  }\item[{snake\+\_\+t $\ast$}]{head,  }\item[{int $\ast$}]{row,  }\item[{int $\ast$}]{col }\end{DoxyParamCaption})}
 
 
 
-Function to receive input from the user and change the position of the snake. 
+Function to control obstacles (walls and invalid positions) and objects to collect. 
 
 
 \begin{DoxyParams}{Parameters}
 {\em l} & Data structure of labyrinth type. \\
 \hline
+{\em head} & Data structure of snake type. \\
+\hline
 {\em row} & Pointer variable to the row of the labyrinth. \\
 \hline
 {\em col} & Pointer variable to the column of the labyrinth. \\
-\hline
-{\em N} & Number of labyrinth rows. \\
-\hline
-{\em M} & Number of labyrinth columns. \\
 \hline
 \end{DoxyParams}
